fix: add touch events for globe on mobile

--- a/src/scripts/components/main/data-viewer/data-viewer.module.css
+++ b/src/scripts/components/main/data-viewer/data-viewer.module.css
@@ -78,12 +78,10 @@
       .globeWrapper {
         /*transform:38 translateX(0) !important;*/
   pointer-events: auto; /* Allows clicks & hover */
-          touch-action: manipulation; /* Prevents zoom but allows tap */
 
         canvas {
           /*right: -50% !important;*/
           position: absolute !important;
-          touch-action: manipulation; /* Prevents zoom but allows tap */
           scale: 1 !important;
           /*transform: translateX(-50%) !important;*/
           /*transform: translateX(-50%) !important;*/
